electronic-school-code

--- a/index.html
+++ b/index.html
@@ -164,8 +164,26 @@
         </div>
     </div>
 </section>
+<!-- Testimonial area end -->
 
 
+        
+<!-- Contant area start -->
+<section>
+    <div class="container d-flex align-items-center justify-content-center contact">
+        <div>
+            <h3>Contact Me</h3>
+            <h6>Let me know your comments in the email below</h6>
+            <input class="form-control" type="text" placeholder="Enter you comments."> <br>
+            <button class="started-buttom">SUBMIT</button>
+        </div>
+   </div>
+</section>
+
+ <!-- Contant area end -->
+
+
+    <!-- Crouse item area start -->
     <div class="container">
         <div class="d-flex align-items-center last-div">
             <div class="row">
@@ -199,14 +217,20 @@
             </div>
             </div>
         </div>
-        
+        <!-- Crouse item area end -->
+
+        <!-- footer area start -->
         <div class="container">
             <footer>
                 <h6>Copyright © 2020 Md-Nadim.com</h6>
             </footer>
         </div>
+        <!-- footer area end -->
+
+        <!-- javaprogram area start -->
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+        <!-- javaprogram area end -->
     </body>
 </html>
